# aerial_interaction

./: .gitignore  README.md
aerial_handover/: CMakeLists.txt  NAVIGATION_README.md  README.md
aerial_handover/config/: dragon_handover_nav_params.yaml
aerial_handover/launch/: handover_main.launch  task.launch
aerial_handover/rviz/: rviz_config.rviz
aerial_handover/scripts/: dragon_handover_nav.py  gazebo_state_converter.py  hand_gazebo_from_interactive_marker.py  hand_grasp_snake_bite.py  interactive_marker.py  marker_to_hand_target.py  mocap_to_hand_target.py  pose_transformer.py  pub_obj_pose_gazebo.py  quest_pose_relay.py  set_hand_pose_gazebo.py
aerial_handover/scripts/tools/: dragon_bite.py
aerial_handover/urdf/: bottle.urdf.xacro  eye_camera_stereo.urdf.xacro  hand.urdf.xacro
aerial_handover/urdf/mesh/: Water_bottle.dae
robots/mini_quadrotor/mujoco/: robot.urdf  robot.xml
snake/: CMakeLists.txt  package.xml
snake/launch/: bringup.launch  grasp_object.launch
snake/robots/: dragon.gazebo.xacro  dragon.urdf.xacro  dragon_no_bat.gazebo.xacro  dragon_no_bat.urdf.xacro  euclid_201709.gazebo.xacro  euclid_201709.urdf.xacro  v1_5_202601.gazebo.xacro  v1_5_202601_no_bat.gazebo.xacro  vim4_202311.gazebo.xacro  vim4_202311.urdf.xacro
snake/scripts/: #autograsping.py#  autograsping_copy.py  chase_hand.py  eye_chasing_hand.py  eye_hand_mid.py  eyesight_center.py  snake_autograsping.py  snake_autograsping_rm.py
snake/urdf/: object.urdf  snake_head.urdf.xacro  snake_head_urdf_example.urdf.xacro
unity/My project/: .gitattributes  .gitignore
(+309 files in other folders)
